--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ cache:
 before_install:
   - ./.travis/install-ndk.sh
   - ./.travis/install-fuse.sh
-  - ./.travis/install-fuseandroid.sh
+  - expect ./.travis/install-fuseandroid.expect
   - ./.travis/install-fusepm.sh
 
 before_script:
