--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,8 @@ cache:
 
 
 before_install:
-  - ./.travis/install-ndk.sh
   - ./.travis/install-fuse.sh
-  - expect ./.travis/install-fuseandroid.expect
+  - ./.travis/install-fuseandroid.sh
   - ./.travis/install-fusepm.sh
 
 before_script:
